; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_desktop.c_create_desk.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_desktop.c_create_desk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DESKTOP_ALL_ACCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @create_desk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_desk(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = call i32 @SetLastError(i32 -17960947)
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @DESKTOP_ALL_ACCESS, align 4
  %9 = call i32 @CreateDesktopW(i32 %7, i32* null, i32* null, i32 0, i32 %8, i32* null)
  store i32 %9, i32* %5, align 4
  %10 = call i32 (...) @GetLastError()
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* %5, align 4
  ret i32 %12
}

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32 @CreateDesktopW(i32, i32*, i32*, i32, i32, i32*) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
